# linehash

./: .gitignore  AGENTS.md  Cargo.toml  OPTIMIZE.md  OPTIMIZE_V2.md  OPTIMIZE_V3.md  PLAN.md  POC.md  README.md  install.sh  plan-claude.md  plan-codex.md
.beads/: issues.jsonl
.github/workflows/: release.yml
bench-results/: bench-2026-03-11-22-02-35.md  bench-2026-03-11-22-58-13.md  bench-2026-03-13-23-01-30.md  edit_bench.md  hash_bench_2026-03-10.md
crates/core/: Cargo.toml  anchor.rs  cli.rs  context.rs  document.rs  error.rs  hash.rs  main.rs  mutation.rs  output.rs  receipt.rs
crates/core/benches/: edit_bench.rs  hash_bench.rs  stats_bench.rs  support.rs  verify_bench.rs  watch_bench.rs
crates/core/commands/: annotate.rs  common.rs  delete.rs  edit.rs  explode.rs  find_block.rs  from_diff.rs  grep.rs  implode.rs  indent.rs  index.rs  insert.rs  merge_patches.rs  mod.rs  move.rs  patch.rs  read.rs  stats.rs  swap.rs  verify.rs  watch.rs
crates/core/tests/: performance.rs  smoke.rs  snapshots.rs
crates/core/tests/fixtures/: brace_balanced.rs  duplicate_hashes.py  indent_python.py  invalid_utf8.txt  mixed_newlines.js  no_trailing_newline.js  simple_crlf.js  simple_lf.js  unicode_content.py  whitespace_only_lines.txt
crates/core/tests/snapshots/: snapshots__edit_ambiguous_hash_error.snap  snapshots__edit_stale_anchor_error.snap  snapshots__index_json_simple_lf.snap  snapshots__index_pretty_simple_lf.snap  snapshots__read_binary_error.snap  snapshots__read_json_simple_lf.snap  snapshots__read_mixed_newlines_error.snap  snapshots__read_pretty_simple_lf.snap  snapshots__stats_json_simple_lf.snap  snapshots__verify_json_mixed_results.snap
crates/core/tests/support/: mod.rs
poc/: benchmark.js  linehash.js
scripts/: render_edit_bench_report.py
