[workspace]
members = ["crates/core"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
xxhash-rust = { version = "0.8", features = ["xxh32"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tempfile = "3"
anyhow = "1"
regex = "1"
notify = "6"
walkdir = "2"
