[package]
name = "linehash"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "linehash"
path = "main.rs"

[dependencies]
xxhash-rust = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "redactions"] }
criterion = "0.5"
tempfile = { workspace = true }

[[bench]]
name = "hash_bench"
harness = false
